--- a/server/client/src/app/category-item-card/category-item-card.component.html
+++ b/server/client/src/app/category-item-card/category-item-card.component.html
@@ -1,4 +1,4 @@
-<div   >
+<!-- <div> -->
    
     <div class="root_div">
         <div>
@@ -8,4 +8,3 @@
             <h4 class="mt-2" style="font-weight: 450; font-size: 0.8rem;" >{{category.title}}</h4>
         </div>
     </div>
-</div>
