--- a/server/client/src/app/home/home.component.css
+++ b/server/client/src/app/home/home.component.css
@@ -1,3 +1,23 @@
 .header_div {
   margin-top: 100px;
 }
+
+.category_card_item:hover {
+  z-index: 1;
+  box-shadow: 0 8px 50px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
+}
+
+.body_div {
+  margin-top: 5px;
+  padding-bottom: 10px;
+}
+
+.product_card {
+  cursor: pointer;
+}
+.product_card:hover {
+  z-index: 1 !important;
+  box-shadow: 0 8px 50px rgba(0, 0, 0, 0.1) !important;
+  transform: scale(1.05) !important;
+}
