--- a/server/client/src/app/home/home.component.html
+++ b/server/client/src/app/home/home.component.html
@@ -1,7 +1,13 @@
 <div class="root_div">
     <div class="header_div container">
-        <div class="category_items_div row">
-            <app-category-item-card class="col-lg-1 col-md-1 col-sm-2 col-3 card me-2 my-1" style="width: 100px !important; height: 100px !important; cursor: pointer;" *ngFor="let category of productCategory" [category]="category" (click)="productCategoryBtnClick(category)" ></app-category-item-card>
+        <div class="category_items_div row m-0">
+            <app-category-item-card class="col-lg-1 col-md-1 col-sm-2 col-3 card me-2 my-1 category_card_item" style="width: 100px !important; height: 100px !important; cursor: pointer;" *ngFor="let category of productCategory" [category]="category" (click)="productCategoryBtnClick(category)" ></app-category-item-card>
+        </div>
+        <div class="body_div row g-3">
+          <div *ngFor="let product of products"  class="col-lg-3 col-md-3 col-sm-2 col-12 p-2">
+            <app-product-card  [product]="product" ></app-product-card>
+          </div>  
         </div>
     </div>
+ 
 </div>
