--- a/server/client/src/app/home/home.component.css
+++ b/server/client/src/app/home/home.component.css
@@ -21,3 +21,12 @@
   box-shadow: 0 8px 50px rgba(0, 0, 0, 0.1) !important;
   transform: scale(1.05) !important;
 }
+
+.home_empty_product_text {
+  font-size: 30px;
+  color: #e30947;
+  font-weight: 900;
+  margin-top: 120px;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
+}
