--- a/server/client/src/app/add-to-cart-card-item/add-to-cart-card-item.component.html
+++ b/server/client/src/app/add-to-cart-card-item/add-to-cart-card-item.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-2">
+<div class="row mt-2 ">
     <div class=" col-md-3 text-center ">
         <img class="img-fluid" style="width: 100%; height: 150px; object-fit:contain;" [src]="cartProductItem.imgUrl" alt="cart image" />
     </div> 
@@ -18,8 +18,8 @@
                {{cartProductItem.description | slice: 0:180}}
            </div>
            <div class="footer my-4">
-            <button mat-raised-button color="primary" class="cart_button" ><mat-icon class="me-2" (click)="decreaseCartCountBtnClick()">remove_circle</mat-icon> {{totalProductCount}} <mat-icon class="ms-2"  (click)="incrementCartCountBtnClick()">add_circle</mat-icon></button>
-            <button mat-raised-button color="warn" class="ms-3 cart_button"  (click)="reduceCartItemBtnClick()">Remove</button>
+            <button mat-raised-button color="primary" class="cart_button" ><mat-icon class="me-1" (click)="decreaseCartCountBtnClick()">remove_circle</mat-icon> {{totalProductCount}} <mat-icon class="ms-1"  (click)="incrementCartCountBtnClick()">add_circle</mat-icon></button>
+            <button mat-raised-button color="warn" class="ms-3 cart_button"  (click)="removeCartItemBtnClick(cartProductItem._id)">Remove</button>
            </div>
       </div>
    </div>  
