--- a/server/client/src/app/wish-list-card/wish-list-card.component.css
+++ b/server/client/src/app/wish-list-card/wish-list-card.component.css
@@ -15,13 +15,12 @@
   margin-top: 0px;
 }
 
-.cart_button {
-  width: 100px;
-  height: 42px;
+.wishlist_image {
+  cursor: pointer;
 }
 
-.item_count_text {
-  font-size: 18px;
-  font-weight: 500;
-  color: green;
+.wishlist_image:hover {
+  z-index: 1;
+  box-shadow: 0 6px 42px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
 }
