--- a/server/client/src/app/home/home.component.html
+++ b/server/client/src/app/home/home.component.html
@@ -12,4 +12,11 @@
           </div>
         </div>
     </div>
+
+
+    <a routerLink="/home/customer">customer</a>
+    <a class="ms-5" routerLink="/home/seller">seller</a>
+    <router-outlet></router-outlet>
+
+
 </div>
