--- a/server/client/src/app/product-card/product-card.component.css
+++ b/server/client/src/app/product-card/product-card.component.css
@@ -20,6 +20,7 @@
   z-index: 1;
   box-shadow: 0 6px 40px rgba(0, 0, 0, 0.1);
   transform: scale(1.05);
+  transition: 0.6s;
 }
 
 .product_image {
