--- a/server/client/src/app/add-to-cart-card-item/add-to-cart-card-item.component.css
+++ b/server/client/src/app/add-to-cart-card-item/add-to-cart-card-item.component.css
@@ -5,9 +5,9 @@
 }
 
 .product_price {
-  font-size: 18px;
+  font-size: 16px;
   color: red;
-  margin-top: 5px;
+  margin-top: 4px;
   font-weight: 500;
 }
 
@@ -23,5 +23,9 @@
 .item_count_text {
   font-size: 18px;
   font-weight: 500;
-  color: green;
+  color: rgb(33, 36, 33);
+}
+
+.total_count_btn {
+  margin-top: -20px;
 }
