--- a/server/client/src/app/add-to-cart-card-item/add-to-cart-card-item.component.html
+++ b/server/client/src/app/add-to-cart-card-item/add-to-cart-card-item.component.html
@@ -11,15 +11,23 @@
                    <h3 class="item_count_text pt-2">{{totalProductCount}} pics</h3>
                </div>
                <div>
-               <P class="product_price  p-2">{{cartProductItem.price * totalProductCount | currency:'INR'}}</P>
+               <P class="p-2 item_count_text">Price: {{cartProductItem.price}}/Pic</P>
             </div>
            </div> 
            <div class="product_description">
                {{cartProductItem.description | slice: 0:180}}
            </div>
-           <div class="footer my-4">
-            <button mat-raised-button color="primary" class="cart_button" ><mat-icon class="me-1" (click)="decreaseCartCountBtnClick()">remove_circle</mat-icon> {{totalProductCount}} <mat-icon class="ms-1"  (click)="incrementCartCountBtnClick()">add_circle</mat-icon></button>
-            <button mat-raised-button color="warn" class="ms-3 cart_button"  (click)="removeCartItemBtnClick(cartProductItem._id)">Remove</button>
+           <div class="" style="color: black; font-size: 16px; font-weight: 450; margin-top: 5px;">
+            Date: {{cartProduct.timeStamp | date}}
+            </div>
+           <div class="product_price">
+           Total Price: {{cartProductItem.price * totalProductCount | currency:'INR'}}
+           </div>
+          
+           <div class="footer mb-4 mt-3">
+            <button class="btn btn-primary btn-sm" ><mat-icon class="me-1" style="font-size: 20px;" (click)="decreaseCartCountBtnClick()">remove_circle</mat-icon><label style="font-size: 18px;"> {{totalProductCount}} </label><mat-icon class="ms-1" style="font-size: 20px;"  (click)="incrementCartCountBtnClick()">add_circle</mat-icon></button>
+            <button class="ms-3 btn btn-success btn-sm"  (click)="buyNowBtnClick(cartProductItem._id)">Buy now</button>
+            <button class="ms-3 btn btn-danger btn-sm"  (click)="removeCartItemBtnClick(cartProductItem._id)">Remove</button>
            </div>
       </div>
    </div>  
