--- a/server/client/src/app/navbar/navbar.component.html
+++ b/server/client/src/app/navbar/navbar.component.html
@@ -5,7 +5,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto ms-3 mb-2 mb-lg-0">
+        <!-- navbar for norman user -->
+        <ul *ngIf="userType==='user'" class="navbar-nav me-auto ms-3 mb-2 mb-lg-0">
           <li class="nav-item"  >
             <!-- [routerLinkActiveOptions]="{exact: true}" -->
             <a class="nav-link nav_link"  aria-current="page" routerLink="/home" routerLinkActive="active"  >Home</a>
@@ -19,8 +20,14 @@
           <li class="nav-item ms-3"  *ngIf="! loginStatus" >
             <a class="nav-link nav_link" aria-current="page" routerLink="/signin"  routerLinkActive="active"  >Login</a>
           </li>
+          <li class="nav-item ms-3"  *ngIf="loginStatus" >
+            <a class="nav-link nav_link" aria-current="page" routerLink="/my-orders"  routerLinkActive="active"  >My-Orders</a>
+          </li>
+          <li class="nav-item ms-3"  *ngIf="! loginStatus" >
+            <a class="nav-link nav_link" aria-current="page" routerLink="/admin-signin"  routerLinkActive="active"  >Admin</a>
+          </li>
           <li class="nav-item ms-3" *ngIf="loginStatus" >
-            <a  (click)="logoutLinkClick()" class="nav-link nav_link" aria-current="page"  routerLink="/logout"  routerLinkActive="active"  >Logout</a>
+            <a  (click)="userLogoutLinkClick()" class="nav-link nav_link" aria-current="page"  routerLink="/logout"  routerLinkActive="active"  >Logout</a>
           </li>
           <li class="nav-item ms-5" style="width: 500px;">
             <form class="d-flex">
@@ -30,8 +37,25 @@
           </li>
         </ul>
        
-        <ul class="navbar-nav  mb-2" >
+        <ul *ngIf="userType==='user'" class="navbar-nav  mb-2" >
             <a routerLink="/add-to-cart" ><mat-icon class="add_to_cart_icon" [matBadge]="totalCartItems" matBadgeColor="warn">add_shopping_cart</mat-icon></a>
+        </ul>
+
+        <!-- navbar for admin -->
+        <ul *ngIf="userType==='admin'" class="navbar-nav me-auto ms-3 mb-2 mb-lg-0">
+          <li class="nav-item"  >
+            <!-- [routerLinkActiveOptions]="{exact: true}" -->
+            <a class="nav-link nav_link"  aria-current="page" routerLink="/add-product" routerLinkActive="active"  >Add product</a>
+          </li>
+          <li class="nav-item" *ngIf="loginStatus" >
+            <a class="nav-link nav_link"  aria-current="page" routerLink="/customer-oders" routerLinkActive="active"  >Customer-Orders</a>
+          </li>
+          <li class="nav-item ms-3" *ngIf="loginStatus" >
+            <a  (click)="adminLogoutLinkClick()" class="nav-link nav_link" aria-current="page"  routerLink="/admin-logout"  routerLinkActive="active"  >Logout</a>
+          </li>
+          <li class="nav-item" >
+            <a class="nav-link nav_link disabled"  aria-current="page"   >Admin Dashboard</a>
+          </li>
         </ul>
        
       </div>
