--- a/server/client/src/app/wish-list-card/wish-list-card.component.html
+++ b/server/client/src/app/wish-list-card/wish-list-card.component.html
@@ -6,9 +6,6 @@
            <div class=" d-flex justify-content-between ">
               <div>
                 <h2 class="product_title pt-2">{{product.name  | slice: 0:25}}</h2>
-               </div>
-               <div >
-                   <!-- <h3 class="item_count_text pt-2">Available</h3> -->
                </div> 
                <div>
                <P class="product_price  p-2">{{product.price | currency:'INR'}}</P>
@@ -19,7 +16,7 @@
            </div>
            <div class="footer my-4">
             <!-- <button mat-raised-button color="primary" class="cart_button" ><mat-icon class="me-2" >remove_circle</mat-icon> {{totalProductCount}} <mat-icon class="ms-2"  (click)="incrementCartCountBtnClick()">add_circle</mat-icon></button> -->
-            <button class="btn btn-primary" (click)="buyNowBtnClick()" >Buy Now</button>
+            <button class="btn btn-primary" (click)="buyNowBtnClick(product._id)" >Buy Now</button>
             <button class="btn btn-danger ms-3" (click)="removeProductBtnClick(product._id)" >Remove</button>
             <!-- <button mat-raised-button color="warn" class="ms-3 cart_button"  >Remove</button> -->
            </div>
