--- a/server/client/src/app/wishlist/wishlist.component.html
+++ b/server/client/src/app/wishlist/wishlist.component.html
@@ -24,7 +24,7 @@
     <div class="cart_products_main_div container">
             <mat-card *ngIf="getWishlistLength()>0" >
                 <div class="cartitem_div">
-                    <app-wish-list-card *ngFor="let productId of getAllWishlistItems()" [productId]="productId"  ></app-wish-list-card>
+                    <app-wish-list-card *ngFor="let wishList of getAllWishlistItems()" [wishListProduct]="wishList"  ></app-wish-list-card>
                 </div>
             </mat-card>
     </div>
