--- a/server/client/src/app/admin-signin/admin-signin.component.html
+++ b/server/client/src/app/admin-signin/admin-signin.component.html
@@ -1,23 +1,28 @@
-<div class="root_div" >
-    <div class="main_div card shadow">
-        <h1 class="heading_text" >Admin Login</h1>
-        <hr class="hr_line" />
-        <p style="color: red;" >{{serverError}}</p>
-        <form #signinForm="ngForm" (ngSubmit)="adminSigninFormSubmit(signinForm.value)" >
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email Address*</label>
-              <input type="email" class="form-control" placeholder="Enter email address" required email id="exampleInputEmail1" #email="ngModel" name="email" [(ngModel)]="adminSigninForm.email" aria-describedby="emailHelp">
-              <div *ngIf="email.touched" >
-                <label class="form_error"  *ngIf="email.errors?.required" >Email field is required</label>
-                <label class="form_error"  *ngIf="email.errors?.email" >Invalid email address</label>
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password*</label>
-              <input type="password" class="form-control" required placeholder="Enter password" #password="ngModel" name="password" [(ngModel)]="adminSigninForm.password" id="exampleInputPassword1">
-                <label class="form_error" *ngIf="password.touched && password.errors?.required" >Password field is required</label>
-            </div>
-            <button type="submit" [disabled]="signinForm.invalid" class="mt-3" style="height: 43px; font-size: 18px; background-color: green; color: white;" mat-raised-button>Signin<mat-icon class="ms-1" style="width: 20px;" >login</mat-icon></button>
-          </form>
-    </div>
+<div class="root_div">
+  <div class="main_div card shadow">
+    <h1 class="heading_text">Admin Login</h1>
+    <hr class="hr_line" />
+    <p style="color: red;">{{serverError}}</p>
+    <form #signinForm="ngForm" (ngSubmit)="adminSigninFormSubmit(signinForm.value)">
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email Address*</label>
+        <input type="email" class="form-control" placeholder="Enter email address" required email
+          id="exampleInputEmail1" #email="ngModel" name="email" [(ngModel)]="adminSigninForm.email"
+          aria-describedby="emailHelp">
+        <div *ngIf="email.touched">
+          <label class="form_error" *ngIf="email.errors?.required">Email field is required</label>
+          <label class="form_error" *ngIf="email.errors?.email">Invalid email address</label>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password*</label>
+        <input type="password" class="form-control" required placeholder="Enter password" #password="ngModel"
+          name="password" [(ngModel)]="adminSigninForm.password" id="exampleInputPassword1">
+        <label class="form_error" *ngIf="password.touched && password.errors?.required">Password field is
+          required</label>
+      </div>
+      <!-- <button type="submit" [disabled]="signinForm.invalid" class="mt-3" style="height: 43px; font-size: 18px; background-color: green; color: white;" mat-raised-button>Signin<mat-icon class="ms-1" style="width: 20px;" >login</mat-icon></button> -->
+      <button type="submit" [disabled]="signinForm.invalid" class="mt-3 btn btn-success btn">Signin</button>
+    </form>
+  </div>
 </div>
