--- a/server/client/src/app/product-card/product-card.component.html
+++ b/server/client/src/app/product-card/product-card.component.html
@@ -16,12 +16,12 @@
           </div>
       </div>
       <p class="product_price" >Price: {{product.price | currency:'INR'}}</p>
-    <p class="product_description"  style="height: 53px;" >{{product.description | slice: 0:100}}...</p>
+    <p class="product_description"   >{{product.description | slice: 0:65}}...</p>
     </mat-card-content>
-    <a [routerLink]="productDetailsUrl">View Details</a>
+    <a [routerLink]="productDetailsUrl" style="margin-top: -10px !important;">View Details</a>
     <mat-card-actions class="ms-1 mb-1">
       <!-- <button mat-raised-button color="primary" style="font-weight: 800 !important;" (click)="buyProductBtnClick(product._id)" >Buy Now</button> -->
-      <button class="btn btn-primary btn-sm"  (click)="buyProductBtnClick(product._id)" >Buy Now</button>
+      <button class="btn btn-success btn-sm"  (click)="buyProductBtnClick(product._id)" >Buy Now</button>
       <!-- <button mat-raised-button color="warn"  (click)="addToCartBtnClick()">{{addToCartButtonCaption}}</button> -->
       <button class="btn btn-danger btn-sm ms-2"  (click)="addToCartBtnClick()">{{addToCartButtonCaption}}</button>
     </mat-card-actions>
