--- a/server/client/src/app/product-details/product-details.component.html
+++ b/server/client/src/app/product-details/product-details.component.html
@@ -15,7 +15,7 @@
            <div class="product_description">
                {{productDetails.description}}
            </div>
-           <div class="footer mt-4 mb-3">
+           <div class="footer mt-4 mb-3" *ngIf="applicationData.userType != 'admin'">
             <button class="btn btn-primary btn-sm"  (click)="buyProductBtnClick(productId)" >Buy Now</button>
             <button class="btn btn-success btn-sm ms-2"  (click)="addToWishlistBtnClick(productId)" >Add To Wishlist</button>
             <button class="btn btn-danger btn-sm ms-2"  (click)="addToCartBtnClick(productId)">Add To cart</button>
