--- a/server/client/src/app/admin-all-product-card/admin-all-product-card.component.css
+++ b/server/client/src/app/admin-all-product-card/admin-all-product-card.component.css
@@ -25,5 +25,25 @@
 
 .product_image {
   width: 100%;
-  height: 260px;
+  height: 280px;
+}
+
+.error_text {
+  font-size: 20px;
+  font-weight: 800;
+  color: red;
+  text-align: center;
+}
+
+label {
+  font-weight: 500;
+  color: rgb(20, 19, 19);
+  font-size: 16px;
+}
+
+span {
+  font-weight: 700;
+  color: red;
+  font-size: 15px;
+  margin-top: 10px;
 }
