--- a/server/client/src/app/signin/signin.component.html
+++ b/server/client/src/app/signin/signin.component.html
@@ -17,7 +17,9 @@
               <input type="password" class="form-control" required placeholder="Enter password" #password="ngModel" name="password" [(ngModel)]="signupForm.password" id="exampleInputPassword1">
                 <label class="form_error" *ngIf="password.touched && password.errors?.required" >Password field is required</label>
             </div>
-            <button type="submit" [disabled]="signinForm.invalid" class="mt-3" style="height: 43px; font-size: 18px; background-color: #ff1760; color: white;" mat-raised-button>Signup<mat-icon class="ms-1" style="width: 20px;" >login</mat-icon></button>
+            <!-- <button type="submit" [disabled]="signinForm.invalid" class="mt-3" style="height: 43px; font-size: 18px; background-color: #ff1760; color: white;" mat-raised-button>Signup<mat-icon class="ms-1" style="width: 20px;" >login</mat-icon></button> -->
+            <button type="submit" [disabled]="signinForm.invalid" class="mt-3 btn btn-danger btn-sm"  mat-raised-button>Signup<mat-icon class="ms-1" style="width: 20px;" >login</mat-icon></button>
+
           </form>
     </div>
 </div>
