--- a/server/client/src/app/wish-list-card/wish-list-card.component.html
+++ b/server/client/src/app/wish-list-card/wish-list-card.component.html
@@ -8,7 +8,7 @@
                 <h2 class="product_title pt-2">{{product.name  | slice: 0:25}}</h2>
                </div> 
                <div>
-               <P class="product_price  p-2">{{product.price | currency:'INR'}}</P>
+               <P class="product_price  p-2">Price: {{product.price | currency:'INR'}}</P>
             </div>
            </div> 
            <div class="product_description">
