--- a/server/client/src/app/customer-orders/customer-orders.component.html
+++ b/server/client/src/app/customer-orders/customer-orders.component.html
@@ -1,11 +1,20 @@
 <section class="root_div">
     <div class="header_div container">
         <mat-card  class="container mb-2 mt-0 header_text"  >Customer Orders</mat-card>
+        <div class="d-flex justify-content-center ">
+            <form class="d-flex mt-1 w-50">
+                <input class="form-control me-2" #input_field type="search" placeholder="Search product..." aria-label="Search">
+                <button class="btn btn-outline-success" (click)="searchBarButtonClick(input_field.value)" >Search</button>
+            </form>
+        </div>
+   
     </div>
     <div class="body_div container">
-        <a routerLink="/customer-oders/status/pending">Pending Orders</a><br/>
-        <a routerLink="/customer-oders/status/successfull">Successfull Orders</a><br/>
-        <a routerLink="/customer-oders/status/cancel">Cancel Orders</a><br/>
+        <mat-tab-group (selectedTabChange)="tabClick($event)" mat-align-tabs="start">
+            <mat-tab label="Orders To Deliver" ></mat-tab>
+            <mat-tab label="Successfull Orders"></mat-tab>
+            <mat-tab label="Cancel Orders"></mat-tab>
+          </mat-tab-group>
       <router-outlet></router-outlet>
 
     </div>
