--- a/server/client/src/app/my-orders-card-item/my-orders-card-item.component.html
+++ b/server/client/src/app/my-orders-card-item/my-orders-card-item.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-2 ">
+<div class="row mt-3 ">
     <div class=" col-md-3 text-center ">
         <img class="img-fluid" style="width: 100%; height: 200px; object-fit:contain;" [src]="productdetails.imgUrl" alt="cart image" />
     </div> 
@@ -30,14 +30,17 @@
                Phone Number: {{userOrder.contactNumber}}
              </div> 
              <div class="product_description">
-                Product Order Date: {{userOrder.timeStamp}}
+                Product Order Date: {{userOrder.timeStamp | date}}
               </div>
              <div class="product_description">
                Product Delivary Date: Within 3 days
              </div>
            <div class="footer mt-3 mb-3">
             <!-- <button mat-raised-button color="secondary" class="ms-3 cart_button" >Buy now</button> -->
-            <button  class="ms-0 btn btn-sm btn-danger" [disabled]="userOrder.delivaryStatus==='successfull' || userOrder.delivaryStatus==='cancel'" (click)="cancelOrderBtnClick(userOrder.productId)" >{{buttonCaption}}</button>
+            <!-- <button  class="ms-0 btn btn-sm btn-danger" [disabled]="userOrder.delivaryStatus==='successfull' || userOrder.delivaryStatus==='cancel'" (click)="cancelOrderBtnClick(userOrder.productId)" >{{buttonCaption}}</button> -->
+            <button  class="ms-0 btn btn-danger btn-sm" *ngIf="userOrder.delivaryStatus==='pending'" (click)="cancelOrderBtnClick(userOrder.productId)" >Cancel Order</button>
+            <h2 style="color: green;" *ngIf="userOrder.delivaryStatus==='successfull'">Product deliverd successfully</h2>
+            <h2 style="color: red;" *ngIf="userOrder.delivaryStatus==='cancel'">You cancel this order</h2>
            </div>
       </div>
    </div>  
