--- a/server/client/src/app/signin/signin.component.css
+++ b/server/client/src/app/signin/signin.component.css
@@ -17,12 +17,12 @@
   text-align: center;
   font-size: 25px;
   font-weight: 800;
-  color: #ff1760;
+  color: green;
 }
 
 .hr_line {
   height: 5px;
-  color: #ff1760;
+  color: green;
   margin-top: 0px;
 }
 
