--- a/server/client/src/app/signin/signin.component.html
+++ b/server/client/src/app/signin/signin.component.html
@@ -18,7 +18,7 @@
                 <label class="form_error" *ngIf="password.touched && password.errors?.required" >Password field is required</label>
             </div>
             <!-- <button type="submit" [disabled]="signinForm.invalid" class="mt-3" style="height: 43px; font-size: 18px; background-color: #ff1760; color: white;" mat-raised-button>Signup<mat-icon class="ms-1" style="width: 20px;" >login</mat-icon></button> -->
-            <button type="submit" [disabled]="signinForm.invalid" class="mt-3 btn btn-danger btn-sm"  mat-raised-button>Signup<mat-icon class="ms-1" style="width: 20px;" >login</mat-icon></button>
+            <button type="submit" [disabled]="signinForm.invalid" class="mt-3 btn btn-success btn-sm"  mat-raised-button>Login<mat-icon class="ms-1" style="width: 20px;" >login</mat-icon></button>
 
           </form>
     </div>
